# rust_launcher_lib

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: lib.rs
src/auth/: mod.rs  profile.rs
src/launch/: mod.rs  utils.rs
src/update/: downloads.rs  mc_files.rs  mc_version.rs  mc_versions.rs  mod.rs  update.rs  updater.rs  utils.rs
src/update/java/: mod.rs  structs.rs
src/update/structs/: mc_assets.rs  mc_libs.rs  mc_versions.rs  mod.rs
