[package]
name = "rust_launcher_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mc_auth = "0.1.0"
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
reqwest = "0.12.4"
futures = "0.3.30"
tokio = { version = "1.37.0", features = ["full"] }
serde_derive = "1.0.198"
async-recursion = "1.1.1"
rustix = "0.38.34"
sha2 = "0.11.0-pre.3"
hex = "0.4.3"
sha1 = "0.11.0-pre.3"
zip-extract = "0.1.3"